added ncurses to build

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -12,7 +12,8 @@ RUN conda update -n base conda && \
     conda install -n base conda-libmamba-solver && \
     conda config --set solver libmamba && \
     conda install -y bioconda::minimap2 && \
-    conda install -y bioconda::samtools
+    conda install -y bioconda::samtools && \
+    conda install -c conda-forge ncurses
 
 # Install Python dependencies
 RUN pip install flask flask-cors
