--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
-  "short_name": "React App",
+  "short_name": "EZ MINIMAP2 ALIGNMENT",
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "io_favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "IS_Logo_Vertical_CS.png",
       "type": "image/png",
       "sizes": "192x192"
     },
